--- a/web/shop/index.html
+++ b/web/shop/index.html
@@ -7,26 +7,27 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="robots" content="noindex,nofollow" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="description" content="" />
 
-    <script src="/shop/jquery-1.js"></script>
+    <base href="/shop/" />
+
+    <script src="./jquery-1.js"></script>
     <script>
       hsjQuery = window["jQuery"];
     </script>
-    <link href="/shop/public_common.css" rel="stylesheet" />
-    <link rel="canonical" href="/shop/" />
+    <link href="./public_common.css" rel="stylesheet" />
+    <link rel="canonical" href="./" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" type="text/css" href="/shop/proximanova.css" />
+    <link rel="stylesheet" type="text/css" href="./proximanova.css" />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
     <meta http-equiv="content-language" content="en-us" />
 
     <title>Berkshire &amp; Nash</title>
-    <script src="/shop/daf69945af.js"></script>
-    <link href="/shop/daf69945af.css" media="all" rel="stylesheet" />
-    <link rel="stylesheet" href="/shop/bootstrap.css" crossorigin="anonymous" />
-    <link href="/shop/css.css" rel="stylesheet" />
-    <link href="/shop/index.css" rel="stylesheet" />
+    <script src="./daf69945af.js"></script>
+    <link href="./daf69945af.css" media="all" rel="stylesheet" />
+    <link rel="stylesheet" href="./bootstrap.css" crossorigin="anonymous" />
+    <link href="./css.css" rel="stylesheet" />
+    <link href="./index.css" rel="stylesheet" />
   </head>
 
   <body>
@@ -36,16 +37,16 @@
           <div class="col-12 col-md-4 col-lg-3 outer-nav first-outer-nav">
             <ul>
               <li>
-                <a href="/shop/404">Account</a>
+                <a href="./404">Account</a>
               </li>
               <li>
-                <a href="/shop/404">Wishlist</a>
+                <a href="./404">Wishlist</a>
               </li>
               <li>
-                <a href="/shop/404">Log In</a>
+                <a href="./404">Log In</a>
               </li>
               <li class="mobile-bag">
-                <a href="/shop/cart"
+                <a href="./cart"
                   ><i
                     class="fa fa-shopping-bag"
                     aria-hidden="true"
@@ -58,7 +59,7 @@
           </div>
 
           <div class="col-12 col-md-5 col-lg-6 logo">
-            <a href="/shop/" style="text-decoration:none;color:#000000;"
+            <a href="./" style="text-decoration:none;color:#000000;"
               >Berkshire &amp; Nash</a
             >
           </div>
@@ -66,7 +67,7 @@
           <div class="col-2 col-md-3 col-lg-3 outer-nav second-outer-nav">
             <ul>
               <li>
-                <a href="/shop/cart"
+                <a href="./cart"
                   ><i
                     class="fa fa-shopping-bag"
                     aria-hidden="true"
@@ -85,140 +86,140 @@
       <div class="main-nav" id="mainnav">
         <ul class="in">
           <li>
-            <a href="/shop/products"
+            <a href="./products"
               >Dresses <i class="fa fa-angle-down" aria-hidden="true"></i>
             </a>
             <ul class="hidden">
               <li>
-                <a href="/shop/products">Floral</a>
+                <a href="./products">Floral</a>
               </li>
               <li>
-                <a href="/shop/products">Midi</a>
+                <a href="./products">Midi</a>
               </li>
               <li>
-                <a href="/shop/products">Maxi</a>
+                <a href="./products">Maxi</a>
               </li>
               <li>
-                <a href="/shop/products">Bodycon</a>
+                <a href="./products">Bodycon</a>
               </li>
               <li>
-                <a href="/shop/products">Formal</a>
+                <a href="./products">Formal</a>
               </li>
             </ul>
           </li>
           <li>
-            <a href="/shop/products"
+            <a href="./products"
               >Tops <i class="fa fa-angle-down" aria-hidden="true"></i>
             </a>
             <ul class="hidden">
               <li>
-                <a href="/shop/products">Blouses</a>
+                <a href="./products">Blouses</a>
               </li>
               <li>
-                <a href="/shop/products">Tees</a>
+                <a href="./products">Tees</a>
               </li>
               <li>
-                <a href="/shop/products">Tanks</a>
+                <a href="./products">Tanks</a>
               </li>
               <li>
-                <a href="/shop/products">Sweaters</a>
+                <a href="./products">Sweaters</a>
               </li>
               <li>
-                <a href="/shop/products">Hoodies</a>
+                <a href="./products">Hoodies</a>
               </li>
             </ul>
           </li>
           <li>
-            <a href="/shop/404"
+            <a href="./404"
               >Bottoms <i class="fa fa-angle-down" aria-hidden="true"></i>
             </a>
             <ul class="hidden">
               <li>
-                <a href="/shop/products">Jeans</a>
+                <a href="./products">Jeans</a>
               </li>
               <li>
-                <a href="/shop/products">Trousers</a>
+                <a href="./products">Trousers</a>
               </li>
               <li>
-                <a href="/shop/products">Skirts</a>
+                <a href="./products">Skirts</a>
               </li>
               <li>
-                <a href="/shop/products">Shorts</a>
+                <a href="./products">Shorts</a>
               </li>
               <li>
-                <a href="/shop/products">Leggings</a>
+                <a href="./products">Leggings</a>
               </li>
             </ul>
           </li>
           <li>
-            <a href="/shop/products"
+            <a href="./products"
               >Outerwear <i class="fa fa-angle-down" aria-hidden="true"></i>
             </a>
             <ul class="hidden">
               <li>
-                <a href="/shop/products">Jackets</a>
+                <a href="./products">Jackets</a>
               </li>
               <li>
-                <a href="/shop/products">Parkas</a>
+                <a href="./products">Parkas</a>
               </li>
               <li>
-                <a href="/shop/products">Trenches</a>
+                <a href="./products">Trenches</a>
               </li>
               <li>
-                <a href="/shop/products">Denim</a>
+                <a href="./products">Denim</a>
               </li>
               <li>
-                <a href="/shop/products">Blazers</a>
+                <a href="./products">Blazers</a>
               </li>
             </ul>
           </li>
           <li>
-            <a href="/shop/products"
+            <a href="./products"
               >Accessories <i class="fa fa-angle-down" aria-hidden="true"></i>
             </a>
             <ul class="hidden">
               <li>
-                <a href="/shop/products">Scarves</a>
+                <a href="./products">Scarves</a>
               </li>
               <li>
-                <a href="/shop/products">Sunglasses</a>
+                <a href="./products">Sunglasses</a>
               </li>
               <li>
-                <a href="/shop/products">Hats</a>
+                <a href="./products">Hats</a>
               </li>
               <li>
-                <a href="/shop/products">Bags &amp; Wallets</a>
+                <a href="./products">Bags &amp; Wallets</a>
               </li>
               <li>
-                <a href="/shop/products">Shoes</a>
+                <a href="./products">Shoes</a>
               </li>
               <li>
-                <a href="/shop/products">Belts</a>
+                <a href="./products">Belts</a>
               </li>
             </ul>
           </li>
           <li>
-            <a href="/shop/products"
+            <a href="./products"
               >Sale <i class="fa fa-angle-down" aria-hidden="true"></i>
             </a>
             <ul class="hidden">
               <li>
-                <a href="/shop/products">Dresses</a>
+                <a href="./products">Dresses</a>
               </li>
               <li>
-                <a href="/shop/products">Tops</a>
+                <a href="./products">Tops</a>
               </li>
               <li>
-                <a href="/shop/products">Bottoms</a>
+                <a href="./products">Bottoms</a>
               </li>
               <li>
-                <a href="/shop/products">Outerwear</a>
+                <a href="./products">Outerwear</a>
               </li>
               <li>
-                <a href="/shop/products">Accessories</a>
+                <a href="./products">Accessories</a>
               </li>
               <li>
-                <a href="/shop/products">Under $10</a>
+                <a href="./products">Under $10</a>
               </li>
             </ul>
           </li>
@@ -252,7 +253,7 @@
             off.
             <a
               class="shop-now-button"
-              href="/shop/products"
+              href="./products"
               style="color:#FFFFFF;text-decoration:none;"
               >Shop Now</a
             >
@@ -264,10 +265,10 @@
         <h1>Featured Tops</h1>
         <div class="row">
           <div class="card col-6 col-md-3 col-lg-3">
-            <a href="/shop/item" style="color:default;text-decoration:none;">
+            <a href="./item" style="color:default;text-decoration:none;">
               <img
                 class="card-img-top"
-                src="/shop/top_0000.jpg"
+                src="./top_0000.jpg"
                 alt="Striped Tee"
               />
               <div class="card-block">
@@ -278,10 +279,10 @@
           </div>
 
           <div class="card col-6 col-md-3 col-lg-3">
-            <a href="/shop/item2" style="color:default;text-decoration:none;">
+            <a href="./item2" style="color:default;text-decoration:none;">
               <img
                 class="card-img-top"
-                src="/shop/top_0001.jpg"
+                src="./top_0001.jpg"
                 alt="Bow-collar short-sleeve blouse"
               />
               <div class="card-block">
@@ -291,10 +292,10 @@
             >
           </div>
           <div class="card col-6 col-md-3 col-lg-3">
-            <a href="/shop/item3" style="color:default;text-decoration:none;">
+            <a href="./item3" style="color:default;text-decoration:none;">
               <img
                 class="card-img-top"
-                src="/shop/top_0008.jpg"
+                src="./top_0008.jpg"
                 alt="cashmere sweater"
               />
               <div class="card-block">
@@ -305,10 +306,10 @@
           </div>
 
           <div class="card col-6 col-md-3 col-lg-3">
-            <a href="/shop/item" style="color:default;text-decoration:none;">
+            <a href="./item" style="color:default;text-decoration:none;">
               <img
                 class="card-img-top"
-                src="/shop/top_0005.jpg"
+                src="./top_0005.jpg"
                 alt="Floral crop top"
               />
               <div class="card-block">
@@ -319,10 +320,10 @@
           </div>
 
           <div class="card col-6 col-md-3 col-lg-3">
-            <a href="/shop/item" style="color:default;text-decoration:none;">
+            <a href="./item" style="color:default;text-decoration:none;">
               <img
                 class="card-img-top"
-                src="/shop/top_0003.jpg"
+                src="./top_0003.jpg"
                 alt="Striped ruffle button blouse"
               />
               <div class="card-block">
@@ -335,10 +336,10 @@
           </div>
 
           <div class="card col-6 col-md-3 col-lg-3">
-            <a href="/shop/item" style="color:default;text-decoration:none;">
+            <a href="./item" style="color:default;text-decoration:none;">
               <img
                 class="card-img-top"
-                src="/shop/top_0002.jpg"
+                src="./top_0002.jpg"
                 alt="Basic button-up"
               />
               <div class="card-block">
@@ -349,10 +350,10 @@
           </div>
 
           <div class="card col-6 col-md-3 col-lg-3">
-            <a href="/shop/item" style="color:default;text-decoration:none;">
+            <a href="./item" style="color:default;text-decoration:none;">
               <img
                 class="card-img-top"
-                src="/shop/top_0004.jpg"
+                src="./top_0004.jpg"
                 alt="Bow-hem diamond print blouse"
               />
               <div class="card-block">
@@ -373,36 +374,36 @@
           <div class="col-6 col-md-3 col-lg-3">
             <h1>Company</h1>
             <ul>
-              <a href="/shop/contact"><li>About Us</li></a>
-              <a href="/shop/404"><li>Careers</li></a>
-              <a href="/shop/404"><li>Affiliates</li></a>
-              <a href="/shop/404"><li>Press</li></a>
-              <a href="/shop/locations"><li>Store Finder</li></a>
-              <a href="/shop/contact"><li>Contact Us</li></a>
+              <a href="./contact"><li>About Us</li></a>
+              <a href="./404"><li>Careers</li></a>
+              <a href="./404"><li>Affiliates</li></a>
+              <a href="./404"><li>Press</li></a>
+              <a href="./locations"><li>Store Finder</li></a>
+              <a href="./contact"><li>Contact Us</li></a>
             </ul>
           </div>
 
           <div class="col-6 col-md-3 col-lg-3">
             <h1>Account</h1>
             <ul>
-              <a href="/shop/404"><li>My Account</li></a>
-              <a href="/shop/cart"><li>Cart</li></a>
-              <a href="/shop/404"><li>Wishlist</li></a>
-              <a href="/shop/404"><li>Order Status</li></a>
-              <a href="/shop/404"><li>Order History</li></a>
+              <a href="./404"><li>My Account</li></a>
+              <a href="./cart"><li>Cart</li></a>
+              <a href="./404"><li>Wishlist</li></a>
+              <a href="./404"><li>Order Status</li></a>
+              <a href="./404"><li>Order History</li></a>
             </ul>
           </div>
 
           <div class="col-6 col-md-3 col-lg-3">
             <h1>Customer Service</h1>
             <ul>
-              <a href="/shop/404"><li>Shipping Information</li></a>
-              <a href="/shop/404"><li>Payment Options</li></a>
-              <a href="/shop/404"><li>Returns/Exchanges</li></a>
-              <a href="/shop/404"><li>Size Guide</li></a>
-              <a href="/shop/404"><li>Privacy Policy</li></a>
-              <a href="/shop/404"><li>Terms of Use</li></a>
-              <a href="/shop/404"><li>FAQ</li></a>
+              <a href="./404"><li>Shipping Information</li></a>
+              <a href="./404"><li>Payment Options</li></a>
+              <a href="./404"><li>Returns/Exchanges</li></a>
+              <a href="./404"><li>Size Guide</li></a>
+              <a href="./404"><li>Privacy Policy</li></a>
+              <a href="./404"><li>Terms of Use</li></a>
+              <a href="./404"><li>FAQ</li></a>
             </ul>
           </div>
 
@@ -422,28 +423,28 @@
         © 2017 for demonstration purposes only. Berkshire &amp; Nash is not a
         real retailer, and orders will not be fulfilled.
 
-        <script type="text/javascript" src="/shop/public_common.js"></script>
+        <script type="text/javascript" src="./public_common.js"></script>
 
-        <script src="/shop/Foresee_Dec2016-main.js"></script>
-        <script src="/shop/ScrollMagic.js"></script>
-        <script src="/shop/debug.js"></script>
-        <script src="/shop/jquery.js"></script>
-        <script src="/shop/velocity.js"></script>
+        <script src="./Foresee_Dec2016-main.js"></script>
+        <script src="./ScrollMagic.js"></script>
+        <script src="./debug.js"></script>
+        <script src="./jquery.js"></script>
+        <script src="./velocity.js"></script>
       </div>
     </div>
 
     <script
-      src="/shop/jquery-3.js"
+      src="./jquery-3.js"
       integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
       crossorigin="anonymous"
     ></script>
     <script
-      src="/shop/popper.js"
+      src="./popper.js"
       integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4"
       crossorigin="anonymous"
     ></script>
     <script
-      src="/shop/bootstrap.js"
+      src="./bootstrap.js"
       integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1"
       crossorigin="anonymous"
     ></script
