--- a/web/test.html
+++ b/web/test.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 
 <html>
   <head>
@@ -9,24 +9,17 @@
   </head>
 
   <body>
-    <textarea
-      id="fsrTextarea"
-      name="textarea1"
-      placeholder="Enter your feedback"
-    >
-    </textarea>
 
-    <br />
 
+    <textarea id="fsrTextarea" name="textarea1" placeholder="Enter your feedback"></textarea>
+    <br>
     <button id="fsrButton" value="Get Text">Submit</button>
 
-    <noscript>Come on...</noscript>
 
+    <noscript>Come on...</noscript>
     <div class="header">
-      <h1>
-        Daedalus shop
-        <h3>#dataless SDK test</h3>
-      </h1>
+      <h1>Daedalus
+        <h3>#dataless SDK test</h3></h1>
     </div>
     <div id="main" class="content"></div>
   </body>
