--- a/web/shop/index.html
+++ b/web/shop/index.html
@@ -8,7 +8,7 @@
     <meta name="robots" content="noindex,nofollow" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-    <base href="/shop/" />
+    <base href="../shop/" />
 
     <script src="./jquery-1.js"></script>
     <script>
